[package]
name = "project-tomato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version="0.35.2", features = ["image", "unsafe_textures"]}
threadpool = "1.8.1"
num_cpus = "1.13.1"
tiled = {version="0.10.2",default-features = false}
glam = "0.21.2"